--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/study_logo_orange_no_text.png" />
+    <link rel="icon" href="/logo_no_text.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudyTailor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
